# skythermal

./: .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py  models.py
backend/app/data/: seed.py
backend/app/routers/: auth.py  briefings.py  flyability.py  mobile.py  ops.py  sites.py  stations.py  tiles.py  users.py  weather.py
backend/app/services/: auth_service.py  briefing.py  flyability.py  ingestion.py  met_norway.py  recommendations.py  tile_renderer.py  weather_fetcher.py
backend/tests/: test_api.py  test_flyability.py
database/: schema.sql
docs/: spec-source.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: component-map.md  main.jsx  main.tsx  styles.css  vite-env.d.ts
frontend/src/api/: client.ts  hooks.ts  types.ts
frontend/src/app/: AppShell.tsx
frontend/src/design/: app.css  layer-registry.ts  safety-colors.ts  tokens.css
frontend/src/map/: MapShell.tsx  WindParticleLayer.ts  mapStyle.ts
frontend/src/panels/: AIFlightBriefingCard.tsx  DriveDecisionCard.tsx  ForecastTimeline.tsx  LayerPanel.tsx  LeftSidebar.tsx  MapOverlays.tsx  SiteDecisionPanel.tsx  common.tsx
frontend/src/state/: mapState.ts
