[project]
name = "skythermal"
version = "0.1.0"
description = "SkyThermal MVP backend for paragliding weather, flyability, and safety decisions."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1",
  "uvicorn[standard]>=0.29,<1",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.2,<3",
  "python-dateutil>=2.9,<3",
  "httpx>=0.27,<1",
  "redis[hiredis]>=5,<6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["backend*"]
